# OSCourse

./: .gitmodules  CMakeLists.txt
linkedlist/: CMakeLists.txt  LinkedList.c  LinkedList.h
linkedlist/test/: CMakeLists.txt  TestLinkedList.cpp  TestLinkedListAllocators.cpp
nprocesses/: CMakeLists.txt  nprocesses.c
parallelworkloads/: CMakeLists.txt  CPUTopology.cpp  CPUTopology.hpp  MonteCarloIntegrator.hpp  MonteCarloMulticore.cpp  NetworkClient.c  NetworkCommon.c  NetworkServer.c  NetworkServer.h  PrintCPUs.cpp  ScheduleTrapezoid.cpp  ScheduleTrapezoid.hpp  TrapezoidClient.cpp  TrapezoidIntegrator.hpp  TrapezoidMulticore.cpp  TrapezoidServer.cpp
parallelworkloads/network/: CMakeLists.txt  CPUTopology.cpp  CPUTopology.hpp  Makefile  NetworkClient.c  NetworkClient.h  NetworkCommon.h  NetworkServer.c  NetworkServer.h  ScheduleTrapezoid.cpp  TrapezoidClient.cpp  TrapezoidServer.cpp
pipeline/: CMakeLists.txt  pipeline.c
semaphores/: CMakeLists.txt  client.c  common.c  common.h  server.c
send/: CMakeLists.txt  client.c  common.c  common.h  server.c
signals/: CMakeLists.txt  signals.c
